--- a/package.json
+++ b/package.json
@@ -21,13 +21,18 @@
     "async": "^3.2.3",
     "component": "^1.1.0",
     "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-native": "^0.67.2",
     "react-native-gesture-handler": "^2.2.0",
+    "react-native-maps": "^0.30.1",
     "react-native-picker-select": "^8.0.4",
     "react-native-reanimated": "^2.4.1",
     "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "^3.3.2",
-    "react-native-screens": "^3.11.1"
+    "react-native-screens": "^3.11.1",
+    "react-router-dom": "^6.2.1",
+    "styled-components": "^5.3.3"
   },
   "devDependencies": {
     "@babel/core": "^7.17.2",
